[project]
name = "pjecz-gob-mx-consultas-pelican"
version = "2.2.0"
description = "Sitio web para consultar información hecho con bootstrap y datatables."
authors = [
    {name = "Guillermo Valdes",email = "guillermo.valdes@pjecz.gob.mx"}
]
license = {text = "AGPL3"}
package-mode = false
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pelican (>=4.11.0.post0,<5.0.0)",
    "pelican-sitemap (>=1.2.2,<2.0.0)",
    "markdown (>=3.10,<4.0)",
    "ghp-import (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
