[project]
name = "pjecz-gob-mx-consultas-pelican"
version = "2.2.1"
description = "Sitio web para consultar información hecho con bootstrap y datatables."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pelican (>=4.11.0.post0,<5.0.0)",
    "pelican-sitemap (>=1.2.2,<2.0.0)",
    "markdown (>=3.10,<4.0)",
    "ghp-import (>=2.1.0,<3.0.0)"
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
